[tool.poetry]
name = "asd"
version = "0.1.0"
description = ""
authors = ["hhssome <artempavel-terekhovy@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
sqlalchemy = "^2.0.16"
pydantic = "^1.10.9"
asyncpg = "^0.27.0"

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
