[tool.poetry]
name = "asd"
version = "0.1.0"
description = ""
authors = ["hhssome <artempavel-terekhovy@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.16"
asyncpg = "^0.27.0"
alembic = "^1.11.1"
python-dotenv = "^1.0.0"
orjson = "^3.9.1"
uvicorn = "^0.22.0"
fastapi = "^0.100.0"
pydantic-settings = "^2.0.1"
sentry-sdk = "^1.28.0"
redis = "^4.6.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
asgi-lifespan = "^2.1.0"

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
